add new endpoints: - equipments - ingredients
